--- a/style/styleCV.css
+++ b/style/styleCV.css
@@ -16,7 +16,6 @@ td,th,#a-propos{
     border-left: 1px solid rgb(96, 96, 96);
     border-right: 1px solid rgb(96, 96, 96);
     padding: 20px;
-    text-align:center;
     text-shadow: 1px 1px 2px pink;
 }
 td {
@@ -55,7 +54,7 @@ h2, h3, h4 {
     border: 3px solid black
 }
 
-.centrer,td,p {
+.centrer,p,#columncenter {
     text-align: center;
     
 }
@@ -89,7 +88,9 @@ h2, h3, h4 {
     h1 {
         width: 70%;
     }
-    #info-contact {
+}
+@media only screen and (max-width:546px){
+    #responsive{
         display: flex;
         flex-direction: column;
     }
@@ -119,6 +120,7 @@ h2, h3, h4 {
 #head{
     background-color: rgb(35, 35, 118);
     display: flex;
+    width: auto;
 }
 .white{
     color: white;
@@ -131,7 +133,8 @@ h2, h3, h4 {
     display: flex;
     flex-direction: column;
 }
-#test{
+#columncenter{
     display: flex;
     align-items: center;
+
 }
